--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "color": "2.0.1",
+    "moment": "2.19.4",
+    "prop-types": "^15.6.0",
+    "react-native-dropdownalert": "^3.1.2",
+    "react-native-extended-stylesheet": "^0.8.0",
+    "react-native-simple-store": "^1.3.0",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
-    "babel-jest": "22.0.4",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.0.4",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
+    "jest-expo": "23.0.0",
     "react-test-renderer": "16.0.0"
   },
   "jest": {
