--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,7 @@ import com.android.build.OutputFile
  *   extraPackagerArgs: []
  * ]
  */
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 project.ext.react = [
     entryFile: "index.js"
