--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0",
-    "react-native": "0.51.0",
     "color": "2.0.1",
+    "eslint": "^4.14.0",
     "moment": "2.19.4",
     "prop-types": "^15.6.0",
+    "react": "16.0.0",
+    "react-native": "0.51.0",
     "react-native-dropdownalert": "^3.1.2",
+    "react-native-elements": "^0.18.5",
     "react-native-extended-stylesheet": "^0.8.0",
     "react-native-simple-store": "^1.3.0",
+    "react-native-vector-icons": "^4.4.3",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
